[gd_scene load_steps=8 format=3 uid="uid://cvco7052u5kw2"]

[ext_resource type="Script" path="res://Scripts/level1.gd" id="1_y38pm"]
[ext_resource type="PackedScene" uid="uid://ubm78q22td44" path="res://Scenes/clawdia.tscn" id="2_vyyac"]
[ext_resource type="PackedScene" uid="uid://d2di8thb68yqv" path="res://Scenes/lava.tscn" id="3_g50hw"]
[ext_resource type="PackedScene" uid="uid://fjpt5jcsasm6" path="res://Scenes/sand.tscn" id="5_38pgf"]
[ext_resource type="Texture2D" uid="uid://rroho1usgydp" path="res://assets/level_6.png" id="5_wul8y"]
[ext_resource type="PackedScene" uid="uid://tjw72j21dvro" path="res://Scenes/locked_door.tscn" id="6_wkpr8"]
[ext_resource type="PackedScene" uid="uid://oh4vnmiyvbxn" path="res://Scenes/key.tscn" id="7_fe628"]

[node name="Level" type="Node2D"]
script = ExtResource("1_y38pm")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1151.0
offset_top = -638.0
offset_right = 1087.0
offset_bottom = 670.0
texture = ExtResource("5_wul8y")
expand_mode = 3

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.53, 0.53)

[node name="Ground" type="Node2D" parent="."]

[node name="Sand" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-1023, 461)

[node name="Sand2" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-888, 528)

[node name="Sand3" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-1031, 588)

[node name="Sand4" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-781, 597)

[node name="Sand5" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-523, 554)

[node name="Sand6" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-384, 548)

[node name="Sand7" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-540, 582)

[node name="Sand8" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(-181, 606)

[node name="Sand9" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(62, 608)

[node name="Sand10" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(304, 623)

[node name="Sand11" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(526, 599)

[node name="Sand12" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(769, 597)

[node name="Sand13" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(1013, 573)

[node name="Sand14" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(1005, 341)

[node name="Sand15" parent="Ground" instance=ExtResource("5_38pgf")]
position = Vector2(1005, 337)

[node name="lava" parent="." instance=ExtResource("3_g50hw")]
position = Vector2(-182, 467)

[node name="CollisionPolygon2D" parent="lava" index="1"]
polygon = PackedVector2Array(747, 205, 431, 3, -90, -14, -107, 220)

[node name="LockedDoor" parent="." instance=ExtResource("6_wkpr8")]
position = Vector2(1020, 132)

[node name="key" parent="." instance=ExtResource("7_fe628")]
position = Vector2(-708, -126)

[node name="Clawdia" parent="." instance=ExtResource("2_vyyac")]
position = Vector2(-1022, 291)

[connection signal="body_entered" from="lava" to="." method="_on_lava_body_entered"]

[editable path="lava"]
